Crossent/yaml/petclinic-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: petclinic
spec:
  selector:
    matchLabels:
      app: petclinic
  replicas: 1
  template:
    metadata:
      labels:
        app: petclinic
    spec:
      containers:
        - name: petclinic
          image: docker.io/sugil0129/crossent:amd64-3.1.0
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "1m"
              memory: "500Mi"
            limits:
              cpu: "1m"
              memory: "1Gi"
