Crossent/yaml/petclinic-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: petclinic-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: tech2.nks.msxpert.co.kr
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
             name: petclinic-service
             port:
               number: 8080
